compiling_error.txt
In file included from /Users/theomorales/Code/Cheap8/CPU.cpp:8:
In file included from /Users/theomorales/Code/Cheap8/CPU.h:11:
/Users/theomorales/Code/Cheap8/Memory.h:30:34: error: unknown type name 'size_t'
                bool writeBytes(uint16_t addr, size_t length, const uint8_t *bytes);
                                               ^
/Users/theomorales/Code/Cheap8/CPU.cpp:83:8: error: expected expression
  *I = register / 100;
       ^
/Users/theomorales/Code/Cheap8/CPU.cpp:84:15: error: type name does not allow storage class to be specified
  *(I + 1) = (register / 10) - *I;
              ^
/Users/theomorales/Code/Cheap8/CPU.cpp:84:24: error: expected ')'
  *(I + 1) = (register / 10) - *I;
                       ^
/Users/theomorales/Code/Cheap8/CPU.cpp:84:14: note: to match this '('
  *(I + 1) = (register / 10) - *I;
             ^
/Users/theomorales/Code/Cheap8/CPU.cpp:84:24: error: C++ requires a type specifier for all declarations
  *(I + 1) = (register / 10) - *I;
              ~~~~~~~~ ^
/Users/theomorales/Code/Cheap8/CPU.cpp:85:14: error: expected expression
  *(I + 2) = register - (*I + *(I + 1));
             ^
/Users/theomorales/Code/Cheap8/CPU.cpp:121:9: warning: cast to 'unsigned short *' from smaller integer type 'int' [-Wint-to-pointer-cast]
    I = (uint16_t *)(opcode & 0x0FFF);
        ^
/Users/theomorales/Code/Cheap8/CPU.cpp:185:27: error: cannot initialize a parameter of type 'uint16_t' (aka 'unsigned short') with an rvalue of type 'uint16_t **' (aka 'unsigned short **')
      dumpRegisters(V[x], &I);
                          ^~
/Users/theomorales/Code/Cheap8/CPU.cpp:73:52: note: passing argument to parameter 'addr' here
void CPU::dumpRegisters(uint8_t register, uint16_t addr) {
                                                   ^
/Users/theomorales/Code/Cheap8/CPU.cpp:188:27: error: cannot initialize a parameter of type 'uint16_t' (aka 'unsigned short') with an rvalue of type 'uint16_t **' (aka 'unsigned short **')
      loadRegisters(V[x], &I);
                          ^~
/Users/theomorales/Code/Cheap8/CPU.cpp:77:52: note: passing argument to parameter 'addr' here
void CPU::loadRegisters(uint8_t register, uint16_t addr) {
                                                   ^
/Users/theomorales/Code/Cheap8/CPU.cpp:222:19: warning: use of logical '||' with constant operand [-Wconstant-logical-operand]
      case 0x5000 || 0x8000 ||
                  ^  ~~~~~~
/Users/theomorales/Code/Cheap8/CPU.cpp:222:19: note: use '|' for a bitwise operation
      case 0x5000 || 0x8000 ||
                  ^~
                  |
2 warnings and 8 errors generated.
